syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";

message NodeChanged {
    string Imsi = 1 [(validator.field) = { string_not_empty: true,  length_gt: 5, length_lt: 16 }, json_name="imsi"];
    string Policy = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="policy"];
    uint64 TotalUsage = 3;
    uint64 UsageTillLastNode = 4;
    string NodeId = 5;
    string OldNodeId = 6;
}

message SessionCreated {
    string Imsi = 1 [(validator.field) = { string_not_empty: true,  length_gt: 5, length_lt: 16 }, json_name="imsi"];
    string Policy = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="policy"];
    uint64 Usage = 3;
    uint64 StartTime = 4;
    string NodeId = 5;
    uint64 SessionId = 6;
}

message CDRReported {
    uint64 Session =1  [json_name="session_id"];
    string NodeId = 2 [json_name="node_id"];
    string Imsi = 3 [(validator.field) = { string_not_empty: true,  length_gt: 5, length_lt: 16 }, json_name="imsi"];
    string Policy = 4 [json_name="policy"];
    string ApnName = 5  [json_name="apn_name"];
    string Ip = 6 [json_name="ue_ip"];
    uint64 StartTime = 7 [json_name="start_time"];
    uint64 EndTime = 8 [json_name="end_time"];
    uint64 LastUpdatedAt = 9 [json_name="last_updated_at"];
    uint64 TxBytes = 10 [json_name="tx_bytes"];
    uint64 RxBytes = 11  [ json_name="rx_bytes"];
    uint64 TotalBytes =12 [json_name= "total_bytes"];
}

message SessionDestroyed {
    string Imsi = 1 [(validator.field) = { string_not_empty: true,  length_gt: 5, length_lt: 16 }, json_name="imsi"];
    string Policy = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="policy"];
    uint32 Usage = 3;
    string NodeId = 6;
    uint64 SessionId = 7;
    uint64 SessionUsage = 8;
    uint64 TotalUsage = 9;
}